<resources>
    <string name="app_name">Musical Structure App</string>
    <string name="category_kpop_music">K-Pop Music</string>
    <string name="network_error">Network is not connected. Please check your network connection.</string>
    <string name="album">Album : </string>
    <string name="artist">Artist :</string>
    <string name="category_my_music">My Music</string>
    <string name="play">play</string>
    <string name="prev_track">previous track</string>
    <string name="next_track">next track</string>
    <string name="no_music_data">There is no music data. Play function is not supported.</string>
    <string name="media_player_error">Currently media player is not supported.</string>
    <string name="play_music">Play Music</string>
    <string name="album_image">album image</string>
    <string name="category_pop_rock_music">Pop/Rock Music</string>
    <string name="category_soundtrack_music">Soundtrack</string>
    <string name="category_classic_music">Classic</string>
    <string name="category_new_age_music">New Age</string>
    <string name="category_disney_music">Disney</string>
    <string name="category_recommended_music">Recommended Music</string>
</resources>
