<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/my_music"
            style="@style/CategoryStyle"
            android:background="@color/category_my_music"
            android:text="@string/category_my_music"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/kpop_music"
            style="@style/CategoryStyle"
            android:background="@color/category_kpop_music"
            android:text="@string/category_kpop_music"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/pop_rock_music"
            style="@style/CategoryStyle"
            android:background="@color/category_pop_rock_music"
            android:text="@string/category_pop_rock_music"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/soundtrack_music"
            style="@style/CategoryStyle"
            android:background="@color/category_soundtrack_music"
            android:text="@string/category_soundtrack_music"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/classic_music"
            style="@style/CategoryStyle"
            android:background="@color/category_classic_music"
            android:text="@string/category_classic_music"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/new_age_music"
            style="@style/CategoryStyle"
            android:background="@color/category_new_age_music"
            android:text="@string/category_new_age_music"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/disney_music"
            style="@style/CategoryStyle"
            android:background="@color/category_disney_music"
            android:text="@string/category_disney_music"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</ScrollView>