<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/list_item_padding">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="@dimen/track_name_text_size"
            android:textStyle="bold"
            tools:text="Track name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/name_text_padding_end"
                android:paddingRight="@dimen/name_text_padding_end"
                android:text="@string/album" />

            <TextView
                android:id="@+id/album_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textStyle="bold"
                tools:text="Album name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/name_text_padding_end"
                android:paddingRight="@dimen/name_text_padding_end"
                android:text="@string/artist" />

            <TextView
                android:id="@+id/artist_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textStyle="bold"
                tools:text="Artist name" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/list_item_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/play"
        android:background="@null"
        android:padding="@dimen/play_control_button_padding"
        android:src="@drawable/list_item_play_button" />

</LinearLayout>