<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/list_item_padding">

    <ScrollView
        android:id="@+id/music_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/play_controller"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/music_info_padding_top_bottom"
            android:paddingBottom="@dimen/music_info_padding_top_bottom">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_text_margin_bottom"
                android:ellipsize="marquee"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                tools:text="Track name" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/album_image_margin_bottom"
                android:contentDescription="@string/album_image"
                android:src="@drawable/album_image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/album_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/list_item_padding"
                    android:gravity="center"
                    android:textSize="@dimen/album_text_size"
                    android:textStyle="bold"
                    tools:text="Album name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/artist_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/track_info_text_size"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold|italic"
                    tools:text="Artist name" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/play_controller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prev_track_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/prev_track"
            android:padding="@dimen/play_control_button_padding"
            android:src="@drawable/prev_track_button" />

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/play"
            android:padding="@dimen/play_control_button_padding"
            android:src="@drawable/play_button" />

        <ImageButton
            android:id="@+id/next_track_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/next_track"
            android:padding="@dimen/play_control_button_padding"
            android:src="@drawable/next_track_button" />

    </LinearLayout>

</RelativeLayout>